<resources>
    <string name="app_name">Your Reaction</string>
    <string name="start_game">Играть</string>
    <string name="difficulty_levels">Выберите уровень сложности</string>
    <string name="start_round_1">Раунд 1</string>
    <string name="start_round_2">Раунд 2</string>
    <string name="start_round_3">Раунд 3</string>
    <string name="start_round_4">Раунд 4</string>
    <string name="start_round_5">Раунд 5</string>
    <string name="start_round_6">Раунд 6</string>
    <string name="start_round_7">Раунд 7</string>
    <string name="start_round_8">Раунд 8</string>
    <string name="start_round_9">Раунд 9</string>
    <string name="start_round_10">Раунд 10</string>
    <string name="stub">-----</string>
    <string name="start">Старт</string>
    <string name="Min">Min</string>
    <string name="Max">Max</string>
    <string name="AVG">Average</string>
    <string name="repeat">Попробовать ещё раз</string>
    <string name="back">Вернуться к выбору сложности</string>
    <string name="FailTap">Количество ложных нажатий</string>
    <string name="countFailTap">0</string>
    <string name="StartChacker">Не показывать стартовый экран</string>

    <string-array name="FalseStartText">
        <item>Жулик</item>
        <item>Слишком рано</item>
        <item>Попробуй еще раз</item>
        <item>Не торопись</item>
        <item>Не засчитано</item>
    </string-array>

    <string-array name="MyColorsStr">
        <item>Серый</item>
        <item>Черный</item>
        <item>Красный</item>
        <item>Синий</item>
        <item>Голубой</item>
        <item>Зеленый</item>
        <item>Желтый</item>
        <item>Оранжевый</item>
        <item>Фиолетовый</item>
        <item>Салатовый</item>
        <item>Розовый</item>
        <item>Коричневый</item>
    </string-array>

    <string-array name="MyColorsHTML">
        <item>#696969</item>
        <item>#090909</item>
        <item>#C83C28</item>
        <item>#2828FF</item>
        <item>#6FBEFF</item>
        <item>#3C8028</item>
        <item>#FFFF77</item>
        <item>#FF9728</item>
        <item>#A628FF</item>
        <item>#99FF99</item>
        <item>#FFC0CB</item>
        <item>#876128</item>
    </string-array>

    <string name="bigSizeText">Впервые научные наблюдения скорости человеческой реакции стали проводить в начале девятнадцатого века,и вовсе не врачи-физиологи, а, как ни странно, астрономы. Началось всё с того, что разные наблюдателизаписывали разное время пересечения звездой меридиана, хотя приборы были одинаковы и работали исправно.
        Настоящие серьёзные эксперименты над скоростью человеческой реакции стали проводиться в середине девятнадцатого века и связаны они с именами Германа Гельмгольца, Зигмунда Экснера и Франциска Дондерса.
        Один отмерял скорость ответов испытуемого на тестовые задания, другой — реакцию на визуальные и слуховые раздражители, а третий — подключал электрошок к ступням.В итоге Экснер ввёл в научный оборот термин «время реакции», а Дондерс разработал классификацию произвольных реакций человека, ему же приписывают основание целой научной дисциплины, получившей название «ментальная хронометрия».
        Благодаря научному прогрессу дисциплина не стоит на месте, новые технологии с каждым годом повышают точность измерения реакции. Естественно, в этих исследованиях крайне заинтересована сфера спорта: регулярные наблюдения скорости реакции игроков ведутся в футболе, теннисе, автогонках, боксе и даже в шахматах. А где большой спорт, там теперь и киберспорт, и игровая индустрия в целом.Однако скорость реакции в спорте не равна реакции в видеоиграх, так же как она не равна и для разных игровых жанров.</string>
    <string name="play">Жми</string>
    <string name="help">Нажми на кнопку, как только она появится!</string>
    <string name="help2">Нажми на кнопку с указаным цветом!</string>
</resources>