<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRound2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="10"
            android:backgroundTint="#1E4278"
            android:text="@string/start"
            android:textSize="34sp"
            app:cornerRadius="25dp"
            app:rippleColor="#FF6600" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/results"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbarSize="4dp"
                android:scrollbars="none">

            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnMainRound7_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#913939"
                            android:backgroundTintMode="add"
                            android:enabled="false"
                            android:text="@string/play"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            app:rippleColor="#1E4278"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck"
                            tools:visibility="visible" />

                        <Button
                            android:id="@+id/btnFalseStartCatcherRound7_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#FFFFFF"
                            android:enabled="true"
                            android:text="@string/play"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
                            tools:visibility="visible" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnMainRound7_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#913939"
                            android:backgroundTintMode="add"
                            android:enabled="false"
                            android:text="@string/play"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            app:rippleColor="#1E4278"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck"
                            tools:visibility="visible" />

                        <Button
                            android:id="@+id/btnFalseStartCatcherRound7_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#FFFFFF"
                            android:enabled="true"
                            android:text="@string/play"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
                            tools:visibility="visible" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnMainRound7_3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#913939"
                            android:backgroundTintMode="add"
                            android:enabled="false"
                            android:text="@string/play"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            app:rippleColor="#1E4278"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck"
                            tools:visibility="visible" />

                        <Button
                            android:id="@+id/btnFalseStartCatcherRound7_3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#FFFFFF"
                            android:enabled="true"
                            android:text="@string/play"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
                            tools:visibility="visible" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnMainRound7_4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#913939"
                            android:backgroundTintMode="add"
                            android:enabled="false"
                            android:hapticFeedbackEnabled="false"
                            android:text="@string/play"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            app:rippleColor="#1E4278"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck"
                            tools:visibility="visible" />

                        <Button
                            android:id="@+id/btnFalseStartCatcherRound7_4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#FFFFFF"
                            android:enabled="true"
                            android:text="@string/play"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
                            tools:visibility="visible" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnMainRound7_5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#913939"
                            android:backgroundTintMode="add"
                            android:enabled="false"
                            android:text="@string/play"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            app:rippleColor="#1E4278"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck"
                            tools:visibility="visible" />

                        <Button
                            android:id="@+id/btnFalseStartCatcherRound7_5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#FFFFFF"
                            android:enabled="true"
                            android:text="@string/play"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
                            tools:visibility="visible" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnMainRound7_6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#913939"
                            android:backgroundTintMode="add"
                            android:enabled="false"
                            android:text="@string/play"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            app:rippleColor="#1E4278"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck"
                            tools:visibility="visible" />

                        <Button
                            android:id="@+id/btnFalseStartCatcherRound7_6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:backgroundTint="#FFFFFF"
                            android:enabled="true"
                            android:text="@string/play"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:visibility="invisible"
                            app:cornerRadius="25dp"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
                            tools:visibility="visible" />
                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/help2"
            android:textAlignment="center"
            android:textColor="#1E4278"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>